--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           flutter-version: '2.5.3'
+      - run: cd io_page
       - run: flutter pub get
       - run: flutter test
       - run: flutter build web
