--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
   url_launcher: ^6.3.2
 
   # The following adds the Cupertino Icons font to your application.
@@ -62,16 +64,16 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/header.jpeg
-    - assets/images/avatar/avatar.jpeg
-    - assets/images/egs/egs1.jpeg
-    - assets/images/egs/egs2.jpeg
-    - assets/images/egs/egs3.jpeg
-    - assets/images/egs/egs4.jpeg
-    - assets/images/egs/egs5.jpeg
-    - assets/images/egs/egs6.jpeg
-    - assets/images/egs/egs7.jpeg
-    - assets/images/egs/egs8.jpeg
+    - assets/images/header.webp
+    - assets/images/avatar/avatar.webp
+    - assets/images/egs/egs1.webp
+    - assets/images/egs/egs2.webp
+    - assets/images/egs/egs3.webp
+    - assets/images/egs/egs4.webp
+    - assets/images/egs/egs5.webp
+    - assets/images/egs/egs6.webp
+    - assets/images/egs/egs7.webp
+    - assets/images/egs/egs8.webp
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
