--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  web: ^0.5.0
   flutter_web_plugins:
     sdk: flutter
   url_launcher: ^6.3.2
