--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,13 @@ flutter:
     - assets/images/egs/egs7.webp
     - assets/images/egs/egs8.webp
     - assets/texts/
+  fonts:
+    - family: "DM Serif Text"
+      fonts:
+        - asset: assets/fonts/DMSerifText-Regular.ttf
+    - family: "Roboto Serif"
+      fonts:
+        - asset: assets/fonts/RobotoSerif-VariableFont_GRAD,opsz,wdth,wght.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
